deps/v8/test/message/fail/instanceof-nonobject.out
*%(basename)s:30: TypeError: Right-hand side of 'instanceof' is not an object
1 instanceof 2;
  ^
TypeError: Right-hand side of 'instanceof' is not an object
    at *%(basename)s:30:3
